add our portfolio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Welcome page of the webstudio" />
     <title>WebStudio</title>
+    <link href="./css/style.css" />
   </head>
   <body>
     <!--Службова інформація-->
@@ -30,6 +31,7 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+      <!-- Перелік бенефітів -->
       <section>
         <h2>Advantages</h2>
         <ul>
@@ -98,6 +100,67 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Портфоліо -->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/mobile-app-design.jpg"
+              alt="mobile app design"
+              width="360"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/qr-code-scaning.jpg"
+              alt="customer hand scanning
+            qr code with a phone"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/laptop-and-smartphone.jpg"
+              alt="laptop and samrtphone"
+              widt="360"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/steering-wheel.jpg"
+              alt="driver's hand holding a steering wheel"
+              width="360"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/smartphone.jpg"
+              alt="wallpapers for smartphone"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/girl-holding-phone.jpg"
+              alt="girl using smertphone with a headphones"
+              width="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
