--- a/index.html
+++ b/index.html
@@ -3,62 +3,78 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Welcome page of the webstudio" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
-    <link href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.com/libraries/modern-normalize"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!--Службова інформація-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"
+          ><span class="logo-part-one">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="/">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+          <li><a href="/" class="link">Studio</a></li>
+          <li><a href="/" class="link">Portfolio</a></li>
+          <li><a href="/" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <!--Головна інформація сайту-->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="container">
+        <h1 class="name-container">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
       <!-- Перелік бенефітів -->
       <section>
         <h2>Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="name-benefit">Strategy</h3>
+            <p class="text-benefit">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="name-benefit">Punctuality</h3>
+            <p class="text-benefit">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="name-benefit">Diligence</h3>
+            <p class="text-benefit">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="name-benefit">Technologies</h3>
+            <p class="text-benefit">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -130,7 +146,7 @@
             <img
               src="./images/laptop-and-smartphone.jpg"
               alt="laptop and samrtphone"
-              widt="360"
+              width="360"
             />
             <h3>Meditation App</h3>
             <p>App</p>
@@ -166,7 +182,9 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo"
+        ><span class="logo-part-one">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
