--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </section>
       <!-- Перелік бенефітів -->
       <section>
-        <h2>Advantages</h2>
+        <h2 class="section-name">Benefits</h2>
         <ul>
           <li>
             <h3 class="name-benefit">Strategy</h3>
@@ -83,45 +83,53 @@
       </section>
       <!--Список учасників команди-->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-name">Our Team</h2>
         <ul>
           <li>
             <img
-              src="./images/Mark-Guerrero.jpg"
+              src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero photo"
               width="264"
+              class="team-list-image"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/Tom-Ford.jpg" alt="Tom Ford photo" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-names">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
           </li>
           <li>
             <img
-              src="./images/Camila-Garcia.jpg"
+              src="./images/tom-ford.jpg"
+              alt="Tom Ford photo"
+              width="264"
+              class="team-list-image"
+            />
+            <h3 class="team-names">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/camila-garcia.jpg"
               alt="Camila Garcia photo"
               width="264"
+              class="team-list-image"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-names">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/Daniel-Wilson.jpg"
+              src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson photo"
               width="264"
+              class="team-list-image"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-names">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Портфоліо -->
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-name">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -129,8 +137,8 @@
               alt="mobile app design"
               width="360"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-item">Banking App</h3>
+            <p class="portfolio-item-class">App</p>
           </li>
           <li>
             <img
@@ -139,8 +147,8 @@
             qr code with a phone"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item">Cashless Payment</h3>
+            <p class="portfolio-item-class">Marketing</p>
           </li>
           <li>
             <img
@@ -148,8 +156,8 @@
               alt="laptop and samrtphone"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-item">Meditation App</h3>
+            <p class="portfolio-item-class">App</p>
           </li>
           <li>
             <img
@@ -157,8 +165,8 @@
               alt="driver's hand holding a steering wheel"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item">Taxi Service</h3>
+            <p class="portfolio-item-class">Marketing</p>
           </li>
           <li>
             <img
@@ -166,8 +174,8 @@
               alt="wallpapers for smartphone"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-item">Screen Illustrations</h3>
+            <p class="portfolio-item-class">Design</p>
           </li>
           <li>
             <img
@@ -175,17 +183,17 @@
               alt="girl using smertphone with a headphones"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item">Online Courses</h3>
+            <p class="portfolio-item-class">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" class="logo"
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo"
         ><span class="logo-part-one">Web</span>Studio</a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
