--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="description" content="Welcome page of the webstudio" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
     />
     <title>WebStudio</title>
     <link
@@ -19,7 +19,8 @@
     <header>
       <nav>
         <a href="./index.html" class="logo"
-          ><span class="logo-part-one">Web</span>Studio</a
+          ><span class="logo-part-one">Web</span
+          ><span class="logo-part-two">Studio</span></a
         >
         <ul>
           <li><a href="/" class="link">Studio</a></li>
@@ -27,7 +28,7 @@
           <li><a href="/" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-container">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts"
@@ -82,7 +83,7 @@
         </ul>
       </section>
       <!--Список учасників команди-->
-      <section>
+      <section class="team-container">
         <h2 class="section-name">Our Team</h2>
         <ul>
           <li>
