--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Welcome page of the webstudio" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
     />
     <title>WebStudio</title>
     <link
@@ -19,13 +21,12 @@
     <header>
       <nav>
         <a href="./index.html" class="logo"
-          ><span class="logo-part-one">Web</span
-          ><span class="logo-part-two">Studio</span></a
+          >Web<span class="logo-part-two">Studio</span></a
         >
         <ul>
-          <li><a href="/" class="link">Studio</a></li>
-          <li><a href="/" class="link">Portfolio</a></li>
-          <li><a href="/" class="link">Contacts</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="./index.html" class="link">Portfolio</a></li>
+          <li><a href="./index.html" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts-container">
