--- a/index.html
+++ b/index.html
@@ -87,42 +87,34 @@
       <section class="team-container">
         <h2 class="section-name">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-list-image">
             <img
               src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero photo"
               width="264"
-              class="team-list-image"
             />
             <h3 class="team-names">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
           </li>
-          <li>
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford photo"
-              width="264"
-              class="team-list-image"
-            />
+          <li class="team-list-image">
+            <img src="./images/tom-ford.jpg" alt="Tom Ford photo" width="264" />
             <h3 class="team-names">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-image">
             <img
               src="./images/camila-garcia.jpg"
               alt="Camila Garcia photo"
               width="264"
-              class="team-list-image"
             />
             <h3 class="team-names">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-image">
             <img
               src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson photo"
               width="264"
-              class="team-list-image"
             />
             <h3 class="team-names">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
@@ -193,8 +185,7 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="footer-logo"
-        ><span class="logo-part-one">Web</span
-        ><span class="footer-logo-studio">Studio</span></a
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
